# yt2notion

./: .cursorrules  .gitignore  CLAUDE.md  PROJECT_MAP.md  README.md  config.example.yaml  pyproject.toml
.gemini/: GEMINI.md
docs/: plan.md
scripts/: test_fun_facts.py
src/yt2notion/: __init__.py  audio.py  chapter_extract.py  cli.py  config.py  extract.py  extract_cmd.py  pipeline.py  process.py  review.py  segment.py  topic_segment.py  workspace.py
src/yt2notion/models/: __init__.py  _parsers.py  anthropic_api.py  base.py  claude_code.py  llm.py
src/yt2notion/prompts/: __init__.py  chinese.md  extract_chapters.md  review.md  review_with_context.md  summarize.md  summarize_chunk.md  summarize_freeform.md  synthesize.md  topic_segment.md
src/yt2notion/storage/: __init__.py  base.py  notion.py  obsidian.py
src/yt2notion/transcribe/: __init__.py  base.py  remote.py
tests/: conftest.py  test_anthropic_api.py  test_audio.py  test_chapter_extract.py  test_claude_code.py  test_cli.py  test_config.py  test_extract.py  test_integration.py  test_model_factory.py  test_models.py  test_notion.py  test_parsers_extended.py  test_pipeline.py  test_process.py  test_prompts.py  test_segment.py  test_storage_factory.py  test_transcribe.py  test_workspace.py
tests/fixtures/: sample_chinese_response.md  sample_summary_response.json  sample_ytdlp_metadata.json
