[project]
name = "yt2notion"
version = "0.1.0"
description = "YouTube subtitles → LLM summary → Notion, in one command"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Yang" }]
keywords = ["youtube", "notion", "llm", "subtitle", "summary"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pysrt>=1.1",
]

[project.optional-dependencies]
notion = ["notion-client>=2.2"]
anthropic = ["anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
yt2notion = "yt2notion.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt2notion"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
